# yapre

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_android.sh  build_emscripten.sh  build_ios.sh  build_linux.sh  build_mac.sh  build_windows.bat
.github/workflows/: android_build.yml  emscripten.yml  emscripten_build.yml  ios_build.yml  linux_build.yml  mac_build.yml  mac_ci.yml  windows_build.yml  windows_ci.yml
build_scripts/: build_bgfx_tools.sh  build_emscripten.sh  build_ios.sh  build_ios_simulator.sh  build_mac_release.sh  build_mac_xcode.sh  build_windows.bat  compile_shaders.sh  run_emscripten.sh  run_mac.sh
data/: banner.ase  dump.lua  yapre.ase  yapre_text.ase
data/bgfx_shader/: f_simple.sc  v_simple.sc  varying.def.sc
data/lua/: app.lua  mario_music.lua  test.lua  yapre.lua  yapreXnes.lua  yecs.lua
data/lua/app/: _init.lua  app.lua  rewind_controller.lua  test_world.lua
data/lua/app/game/: _init.lua  init.lua  world_dungeon.lua  world_flappy_duck.lua  world_image.lua  world_label.lua  world_mario_music.lua  world_palette.lua  world_slides.lua  world_word_slide_maker.lua
data/lua/core/: _init.lua  components.lua  entities.lua  serialization.lua  splash_screen.lua  splash_world.lua  systems.lua  yecs.lua
data/lua/core/components/: _init.lua  animation.lua  data.lua  input.lua  layout.lua  position.lua  size.lua  sprite.lua  sprite_text.lua  tags.lua  text.lua  tick.lua  tree.lua
data/lua/core/data/: emscripten_keycode_mapping.lua  font_data.lua  palette_data.lua
data/lua/core/entities/: _init.lua  ui_entities.lua
data/lua/core/entities/ui/: _init.lua  button.lua  dpad.lua  image.lua  joystick.lua  label.lua  palette.lua  panel.lua  progress.lua  progress_selector.lua  sprite_label.lua
data/lua/core/systems/: _init.lua  dummy.lua  input.lua  sprite.lua  tick.lua  tree.lua
data/lua/data/: font_data.lua
data/lua/nes/: apu.lua  cpu.lua  nes.lua  pads.lua  palette.lua  ppu.lua  rom.lua  utils.lua
data/lua/test/: mario_music.lua
data/lua/utils/: copy.lua  debug_log.lua  debugger.lua  eval.lua  log.lua  package_path.lua  reload.lua  strict.lua  table_save.lua  uuid.lua  yecs.lua
data/shader/: text.fs  text.vs
data/shaders/: model.vs  screen.fs  screen.vs  shader.fs  shader.vs  shader1.fs  shader1.vs  sprite.fs  sprite.vs
docs/: CNAME  yapre.data  yapre.js  yapre.wasm  yapre.wasm.map
emscripten/: index.html
include/: audio.h  core.h  renderer.h  shader.h  window_manager.h  yaudio.h  ycore.h  yinput.h  ylua.h  yluabind.hpp  yrenderer.h  yshader.h  ytimer.h  ywindow.h
include/deprecated/: mesh.h
platform/android/run.yapre/: .gitignore  gradle.properties  local.properties
platform/android/run.yapre/app/: build.gradle
platform/android/run.yapre/app/jni/: CMakeLists.txt
platform/android/run.yapre/app/src/main/: AndroidManifest.xml  AndroidManifest.xml-e
platform/android/run.yapre/app/src/main/java/org/libsdl/app/: SDLActivity.java
platform/android/run.yapre/app/src/main/java/run/yapre/: yapreActivity.java
platform/android/run.yapre/gradle/wrapper/: gradle-wrapper.properties
platform/emscripten/: .CMakeLists.txt.swp  CMakeLists.txt  index.html  setup_emsdk.sh
platform/ios/: CMakeLists.txt
raw_resource/: banner.ase  blood.aseprite  m.aseprite  major_tom.aseprite  major_tom2.aseprite  mario.aseprite  space_oddity.aseprite  yapre.ase
src/: Doxyfile  audio.cpp  bgfx_main.cpp  bgfx_main.mm  core.cpp  hello_world.cpp  main.cpp  renderer.cpp  shader.cpp  window_manager.cpp  yaudio.cpp  yaudio.h  ycore.cpp  ycore.h  yfont.cpp  yfont.h  yinput.cpp  ylua.cpp  yluaInterface.inl  yluabind.hpp  yluainterface.inl  yrenderer.cpp  yrenderer.h  yrepl.cpp  yrepl.h  yscheduler.cpp  yscheduler.h  yshader.cpp  yshader.h  ysocket.cpp  ysystems.inl  ytexture.cpp  ytexture.h  ytimer.cpp  ywindow.cpp  ywindow.h  ywindow.mm
src/deprecated/: model.h
src/systems/: yaudio.cpp  yaudio.h  yinput.cpp  ylua.cpp  yrenderer.cpp  yrenderer.cpp.old  yrenderer.h  yrenderer.h.old  yrenderer_bgfx.cpp  yrenderer_bgfx.h  yrepl.cpp  ytimer.cpp
src/systems/graphics/: yfont.cpp  yfont.h  yshader.cpp  yshader.h  ytexture.cpp  ytexture.h
tools/: image_trimmer.py
tools/palette_converter/: palette_converter.py
vis/aseprite/: flappy_duck.aseprite  flappy_duck_background.aseprite  flappy_duck_cactus.aseprite  flappy_duck_head.aseprite  palette.aseprite  yapre_text.aseprite
